<resources>
    <string name="app_name">Bodega</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_etiquetas">Etiquetas</string>
    <string name="menu_articulos">Artículos</string>
    <string name="menu_proformas">Proformas</string>
    <string name="menu_rotacion">Rotación</string>
    <string name="menu_documentos">Verificar documentos</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_salir">Salir</string>
    <string name="n_tas_de_cr_dito">Nótas de crédito</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orden_de_compra">Orden de compra</string>
    <string name="title_activity_detalle_orden">DetalleOrden</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="asignar_familia_a_bloque">Asignar familia a bloque</string>
    <string name="click_aqu_para_elegir_una_familia">CLICK AQUÍ PARA ELEGIR UNA FAMILIA</string>
    <string name="title_activity_detalle_compra">DetalleCompra</string>
</resources>
